--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,11 @@ dependencies {
     def fragment_version = "1.3.5"
     implementation("androidx.fragment:fragment-ktx:$fragment_version")
 
+     //Dager 2
+    def dagger_version = "2.27"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
     //Dagger Hilt
     def hilt_version = "2.35"
     implementation("com.google.dagger:hilt-android:$hilt_version")
